--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Argon Dashboard React",
-  "name": "Argon Dashboard React by Creative Tim",
+  "short_name": "SafetyNet App",
+  "name": "SafetyNet App",
   "icons": [
     {
       "src": "favicon.ico",
